Bug 515972 - Text Style preview reverts to a default when changing paragraph properties
Summary: Text Style preview reverts to a default when changing paragraph properties
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tool/Text (other bugs)
Version First Reported In: 6.0.0-beta1
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-02-14 00:37 UTC by Vitamorus
Modified: 2026-03-10 10:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Video of the text preview reverting to a "default" when changing paragraph properties (1.42 MB, video/mp4)
2026-02-14 00:37 UTC, Vitamorus
Details
system info (16.63 KB, text/plain)
2026-02-14 00:37 UTC, Vitamorus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vitamorus 2026-02-14 00:37:34 UTC
Created attachment 189556 [details]
Video of the text preview reverting to a "default" when changing paragraph properties

SUMMARY
When editing/adding a Style Preset in the Text Properties docker you get a nifty preview in the top left of the dialog. If you change the Style Type to 'Paragraph' and try to make changes to the paragraph, the font properties will unset to some kind of default font and color. 

STEPS TO REPRODUCE
1. Create a new document
2. Open the Text Properties docker and switch to the Preset tab. 
3. Chose to add a Style Preset in the bottom right.
4. Set the Style Type to 'Paragraph' 
5. Modify any of the properties of the paragraph (font size, font family, text align)

The preview will get "unset" and not actually preview the appearance of the text.

This was tested with Qt Platform Name:  "wayland". 
Attached is a video recording of the bug, along with additional system info.
Comment 1 Vitamorus 2026-02-14 00:37:58 UTC
Created attachment 189557 [details]
system info
Comment 2 wolthera 2026-03-10 10:08:49 UTC
Git commit 6a81ad09188e2116c3aee8be27a162414a6a3fc0 by Wolthera van Hövell tot Westerflier.
Committed on 10/03/2026 at 10:08.
Pushed by woltherav into branch 'master'.

Allow character properties on paragraphs.

I forgot to remove this when switching up the paragraph and character
property handling.

M  +2    -9    libs/flake/resources/KoCssStylePreset.cpp

https://invent.kde.org/graphics/krita/-/commit/6a81ad09188e2116c3aee8be27a162414a6a3fc0
Comment 3 wolthera 2026-03-10 10:09:11 UTC
Git commit d95c3d85347c5b5bd7033805fb4d6120b5abf93f by Wolthera van Hövell.
Committed on 10/03/2026 at 10:09.
Pushed by woltherav into branch 'krita/6.0'.

Allow character properties on paragraphs.

I forgot to remove this when switching up the paragraph and character
property handling.


(cherry picked from commit 6a81ad09188e2116c3aee8be27a162414a6a3fc0)

Co-authored-by: Wolthera van Hövell tot Westerflier <griffinvalley@gmail.com>

M  +2    -9    libs/flake/resources/KoCssStylePreset.cpp

https://invent.kde.org/graphics/krita/-/commit/d95c3d85347c5b5bd7033805fb4d6120b5abf93f