Allow character properties on paragraphs.

I forgot to remove this when switching up the paragraph and character
property handling.

BUG:515972